sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:14: error: not found: value o
			if (c=o) { 
                              ^AlgGnomeSort:14: error: type mismatch;
 found   : Unit
 required: Boolean
			if (c=o) { 
                             ^