sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	val l = getNombreValeurs()-1
	var fin =false
	do {
		for (i<- 1 to l ) {
			var c = 0
			for (h<- i to 1 by -1) {
				if (plusPetit(h,h-1)) {
					echange(h,h-1)
					c +=1
				}
			}
			if (c=o) { 
				fin = true
			}
		}
	} while (!fin)
}
